--- a/src/main/webapp/WEB-INF/textile/projects_ru/handpoint.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/handpoint.textile
@@ -9,7 +9,7 @@ h1. Handpoint
 
 *Технологии:* AndroidSDK
 
-Мобильное POS приложение Handpoint позволяет принимать платежи с помощью дебетовых и кредитных карт, посредством чипа, пина и магнитной полосы в сочетании с устройством для считывания карты Handpoint.
+Мобильное POS приложение Handpoint позволяет принимать платежи с помощью дебетовых и кредитных карт, посредством чипа, пина и магнитной полосы в сочетании с устройством для считывания карты Handpoint. Нашей командой была так же написана SDK для портативного гибридного сканера MPED-400 с подключением как через кабель так и через bluetooth и bluetooth le. 
 
 <div class="p-img">
 
