--- a/src/main/webapp/WEB-INF/textile/projects_ru/vyke.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/vyke.textile
@@ -24,10 +24,12 @@ h1. Vyke
 
 <div class="p-img">
 
-!../../res/img/project/mobile/AndroidMobile1.jpg!
+!../../res/img/project/mobile/Vyke-phone-1.png!
 
-!../../res/img/project/mobile/AndroidMobile2.jpg!
+!../../res/img/project/mobile/Vyke-phone-2.png!
 
-!../../res/img/project/mobile/AndroidMobile3.jpg!
+!../../res/img/project/mobile/Vyke-phone-4.png!
+
+!../../res/img/project/mobile/Vyke-tablet-1.png!
 
 </div></div>
