--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/handpoint.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/handpoint.textile
@@ -9,7 +9,7 @@ h1. Handpoint
 
 *Technologies:* AndroidSDK.
 
-The Handpoint mobile POS app enables you to accept debit and credit card payments both chip&pin and magstripe with your smartphone in conjunction with the Handpoint card reader.
+The Handpoint mobile POS app enables you to accept debit and credit card payments both chip&pin and magstripe with your smartphone in conjunction with the Handpoint card reader. Our team have developed SDK for Portable Hybrid PINPad MPED-400 for connection via cable connection, bluetooth and bluetooth le. 
 
 <div class="p-img">
 
