--- a/src/main/webapp/WEB-INF/textile/projects_ru/jagermeister.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/jagermeister.textile
@@ -9,8 +9,8 @@ h1. Jagermeister
 
 *Технологии:* Java, Spring Framework, Spring Security, Google Guava, JClouds, React JS, React Router, Grunt.
 
- Проект широко использует API облачных провайдеров таких как AWS EC2, Google Cloud Engine, Microsoft Azure для создания и использования 
- виртуальных машин единоразово и по расписанияю.
+Проект широко использует API облачных провайдеров таких как AWS EC2, Google Cloud Engine, Microsoft Azure 
+для создания и использования виртуальных машин единоразово и по расписанияю.
  
 <div class="p-img">
 
