--- a/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
@@ -7,6 +7,8 @@ h1. Acai Author
 
 <div class="vc-box">
 
+*Технологии:* Sping MVC, Spring Security, Spring Data JPA, Tiles, Bootstrap, JQuery, MarkItUp!, DZSlides.
+
 Веб-приложение для создания/просмотра/прохождения презентаций и тестов для студентов и учеников. Вцелом, приложение расчитано на любую аудиторию: школу, университет, курсы повышения квалификации, и т.д.. Большой набор параметров позволяет создать очень разнообразные модули.
 
 Особенности:
