--- a/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
@@ -14,7 +14,7 @@ h1. Acai Author
 Особенности:
 * контент оптимизирован под мобильные устройства
 * оффлайн режим (для ранее загруженных модулей)
-* разнообразные контент для построения модулей: текст (с различными типами форматирования), изображения, музыкальные файлы.
+* разнообразный контент для построения модулей: текст (с различными типами форматирования), изображения, музыкальные файлы.
 
 <div class="p-img">
 
