--- a/src/main/webapp/WEB-INF/textile/projects_ru/FaceRecognizer.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/FaceRecognizer.textile
@@ -9,7 +9,7 @@ h1. Face Recognizer
 
 *Technologies:* библиотека OpenCV.
 
-Прототип проекта по распознаванию людей по фотографии из набора заданых и определению различных атрибутов, таких как: 
+Прототип проекта по распознаванию лиц людей по фотографии. Расознавание делается на основе таких параметров как:
 
 * Цвет глаз
 * Цвет волос
