- screenshots for Handpint are updated

--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/handpoint.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/handpoint.textile
@@ -13,10 +13,8 @@ The Handpoint mobile POS app enables you to accept debit and credit card payment
 
 <div class="p-img">
 
-!(img-fl-left)../../res/img/project/java/handpoint_1.png!
+!../../res/img/project/java/hp1.png!
 
-!(img-fl-left)../../res/img/project/java/handpoint_2.png!
-
-!(img-fl-left)../../res/img/project/java/handpoint_3.png!
+!../../res/img/project/java/hp2.png!
 
 </div></div>
