- new screen to iSign added

--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/isign.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/isign.textile
@@ -14,6 +14,8 @@ iSign is a handy app for those who have to deal with numerous paperwork constant
 <div class="p-img">
 
 
+!(img-fl-left)../../res/img/project/mobile/is7.png!
+
 !(img-fl-left)../../res/img/project/mobile/is1.png!
 
 !(img-fl-left)../../res/img/project/mobile/is2.png!
