--- a/src/main/webapp/WEB-INF/textile/projects_en/trakit.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_en/trakit.textile
@@ -9,7 +9,7 @@ h1. TrakIt
 
 *Technologies:* QR codes scanner, OpenEars, Tesseract for OCR discount cards, REST API, Network Reachability, Async Web Requests.
 
-Project of payment system based on QR codes. Project includes 2 parts - client (developed by our team) and server (provided by customer).
+Project of payment system for iPhone based on QR codes. Project includes 2 parts - client (developed by our team) and server (provided by customer).
 There is two ways of project usage:
 
 * As buyer
