List of fixes: http://pragmasoft.com.ua:3000/issues/4201 http://pragmasoft.com.ua:3000/issues/4183 http://pragmasoft.com.ua:3000/issues/4174 http://pragmasoft.com.ua:3000/issues/4173 http://pragmasoft.com.ua:3000/issues/4172 http://pragmasoft.com.ua:3000/issues/4171

--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/FaceRecognizer.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_en/FaceRecognizer.textile
@@ -9,7 +9,7 @@ h1. Face Recognizer
 
 *Technologies:* OpenCV library.
 
-Prototype of project for recognizing faces, based on the list of selected parameters of person's photo:
+Prototype of iPhone application for recognizing faces, based on the list of selected parameters of person's photo:
 
 * Eyes color
 * Hair color
