- vacancies page updated (Java Junior currently available) - icon for Jagermeister project changed - list of technologies for Jagermeister changed (Cordova added) - Ticket Grechen added to mobile section

--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/trakit.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/trakit.textile
@@ -10,14 +10,13 @@ h1. TrakIt
 *Технологии:* QR codes scanner, OpenEars, Tesseract for OCR discount cards, REST API, Network Reachability, Async Web Requests.
 
 Проект платежной системы для iPhone, основанной на QR кодах. Проект состоит из двух частей: килиентской (разработана нашей командой) и серверной (предоставленной заказчиком).
+
 Приложение предполагает две стратегии использования:
 
 * Как покупатель
 * Как продавец
 
-Для работы как покупатель необходимо настроить свой кошелек и привязать кредитную карту или PayPal аккаунт. Для осуществления
-покупки необходимо отсканировать QR код и получить по продукту информацию с сервера (цена, размеры, цвет), выбрать
-все необходимые опции как размер, цвет, адрес доставки и пр. и оплатить. 
+Для работы как покупатель необходимо настроить свой кошелек и привязать кредитную карту или PayPal аккаунт. Для осуществления покупки необходимо отсканировать QR код и получить по продукту информацию с сервера (цена, размеры, цвет), выбрать все необходимые опции как размер, цвет, адрес доставки и пр. и оплатить. 
 
 <div class="p-img">
 
