--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/zpc.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/zpc.textile
@@ -10,19 +10,27 @@ h1. Z. P. C.
 *Technologies:* Rubix, React JS.
 
 Проект на клиете на основе шаблона Рубикс, и, использует те же инструменты сборки.
+
 Он  отображает две вкладки или подвкладки, обе содержат масштабируемые карты разделов и фильтры.
+
 Для функций используется "радиальное (лучевое) дерево":http://bl.ocks.org/mbostock/4063550.
-Для теста используется "масштабируемый раздел":http://mbostock.github.io/d3/talk/20111018/partition.html.
+
+Для тестов используется "масштабируемый раздел":http://mbostock.github.io/d3/talk/20111018/partition.html.
+
 Доменная модель имеет 2 иерархических объекта:
+
 1) Требования спецификации с характеристиками, ее компоненты и т.д.
-2) Тестовые наборы, содержащие вложенные наборы тестов произвольных уровней, содержащие тестовые случаи
+
+2) Тестовые наборы, содержащие вложенные наборы тестов произвольных уровней, содержащие тестовые случаи.
+
 Они относятся друг к другу, как множество к множеству, то есть одна фича может быть покрыта несколькими тестими и один тест может покрывать несколько фич.
+
 Обе страницы должны иметь строку поиска, где вводимый текст будет фильтровать дерево на содержание только элементов с подстроками и их дочерними обьектами.
 
 <div class="p-img">
 
 !../../res/img/project/java/zpc1.png!
-!../../res/img/project/java/zpc1.png!
+!../../res/img/project/java/zpc2.png!
 
 
 </div></div>
