add images to description of acai

--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
@@ -16,13 +16,10 @@ h1. Acai Author
 * оффлайн режим (для ранее загруженных модулей)
 * разнообразный контент для построения модулей: текст (с различными типами форматирования), изображения, музыкальные файлы.
 
-<div class="p-img">
+<div class="p-img" >
 
-!../../res/img/project/design/acai0_1.png!
-!../../res/img/project/design/acai0_2.png!
-!../../res/img/project/design/acai0_3.png!
 !../../res/img/project/design/acai1.png!
-!../../res/img/project/design/acai2.png!
+!=../../res/img/project/design/acai2.png!
 !../../res/img/project/design/acai3.png!
 
 
