--- a/src/main/webapp/WEB-INF/textile/projects_en/acai.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_en/acai.textile
@@ -18,11 +18,8 @@ Features:
 
 <div class="p-img">
 
-!../../res/img/project/design/acai0_1.png!
-!../../res/img/project/design/acai0_2.png!
-!../../res/img/project/design/acai0_3.png!
 !../../res/img/project/design/acai1.png!
-!../../res/img/project/design/acai2.png!
+!=../../res/img/project/design/acai2.png!
 !../../res/img/project/design/acai3.png!
 
 
