--- a/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
+++ b/src/main/webapp/WEB-INF/textile/projects_ru/acai.textile
@@ -19,7 +19,7 @@ h1. Acai Author
 <div class="p-img" >
 
 !../../res/img/project/design/acai1.png!
-!=../../res/img/project/design/acai2.png!
+!{display: block;margin-left: auto;margin-right: auto;}../../res/img/project/design/acai2.png!
 !../../res/img/project/design/acai3.png!
 
 
