fix orthographic mistake

--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/echo-nearest-lanes.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/echo-nearest-lanes.textile
@@ -15,17 +15,17 @@ h1. Echo Nearest Lanes
 Приложение состоит из двух частей :
 * Стартующий по таймеру ETL процесс, который : 
 ** импортирует данные об истории перевозок из FTP каталога в БД
-** выполняет статисточеские расчеты
+** выполняет статистические расчеты
 ** сохраняет результаты в БД для визуализации в Web UI
 ** экспортирует результаты расчетов в FTP каталог.
 * Web UI для визуализации результатов расчетов, которое  
 ** Авторизует пользователей через OneLogin.com SAML Connector
 ** Визуализирует маршрут транспортировки и сравнимые маршруты из истории перевозок на Google Maps
-** Показывает детальную информации о сравнимые маршруты из истории перевозок 
-** Показывает статистическое предстазание стоимости перевозки
+** Показывает детальную информации о сравниваемых маршрутах из истории перевозок
+** Показывает статистическое предсказание стоимости перевозки
 
 Стартующий по таймеру ETL процесс создан при помощи Spring Batch framework и развернут в AWS Data Pipeline инфраструктуре.
-Web UI написно на Angular JS frontend framework and взаимодействетс через REST с backend на Spring MVC framework.   
+Web UI написно на Angular JS frontend framework и взаимодействует через REST с backend на Spring MVC framework.
  
 <div class="p-img">
 
