--- a/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/fna.textile
+++ b/pragmasoft-site-new/trunk/src/main/webapp/WEB-INF/textile/projects_ru/fna.textile
@@ -12,7 +12,7 @@ h1. FNA
 FNA это аналитическая платформа, которая помогает финансовым учреждениям и регулирующим органам проводить системный анализ а также визуализировать  комплексные финансовые данные
 Платформа FNA это комплексное решение разработанное для расширенного анализа и визуализации финансовых сетей.
 * Рассчитать показатели графика, выполнения кластерного анализа и проводить стресс-тесты и моделирования.
-* Создать расширенные и интерактивные визуализации на базе интернета. Свободно делится ими в вашей организации, интернете или в печатных изданиях.
+* Создать расширенные и интерактивные визуализации на базе интернета, свободно делиться ими в вашей организации, интернете или в печатных изданиях.
 * Запускать FNA на настольном компьютере или на внутренней сети компании. Для одного или многих пользователей.
 * Подключаться напрямую к внешним базам данных или любым онлайн ресурсам
 * Разрабатывать сценарии для полностью автоматизированной и регулярной аналитики или использовать API REST- FNA от внешних приложений.
